# probriquegl

./: Cargo.toml  README.md  launch_civ6.sh  launch_hello.sh
src/: gl.rs  gl_def.rs  glx.rs  lib.rs
tests/: main.c
tests/include/glad/: glad.h
tests/src/: glad.c  main.cpp
