[package]
name = "probriquegl"
version = "0.1.0"
authors = ["vincent"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.91"

[lib]
name = "GL"
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
