[package]
name = "probriquegl"
version = "0.1.0"
authors = ["vincent"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.91"
lazy_static = "1.4.0"
rand = "0.8.3"

[lib]
name = "GL"
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
